--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ install:
 before_script:
   - nvm use
 script:
-  - echo "Hello, world!"
+  - make all
 after_script:
   - echo $TRAVIS_COMMIT_RANGE
