--- a/.deosrc
+++ b/.deosrc
@@ -14,6 +14,7 @@ DEOS_HOST_OS=$(shell uname -s)
 #[Paths]
 PATH_BASE=$(CURDIR)
 PATH_BIN=$(PATH_BASE)/bin
+PATH_DOJO=$(PATH_BASE)/dojo
 
 #[Executables]
 PIP=$(shell which pip2.7)
@@ -21,3 +22,22 @@ PRINT=$(PATH_BIN)/printm
 PY=$(shell which python2.7)
 SH=$(shell which bash)
 VENV=$(shell which virtualenv)
+
+#[Compiler]
+ifeq ($(DEOS_HOST_OS),$(IS_MAC))
+CC=clang
+else
+CC=clang
+endif
+ifeq ($(DEOS_ASMJS),$(IS_TRUE))
+CC=emcc
+endif
+CFLAGS=-Wall -g
+CLINKS=
+PY_CFLAGS=
+PY_CLINKS=
+ifeq ($(DEOS_ASMJS),$(IS_TRUE))
+EXE=$(DEOS_APP_NAME).html
+else
+EXE=$(DEOS_APP_NAME)
+endif
