--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,14 @@ before_install:
 install:
   - sudo curl https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
   - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-  - sudo apt-get update
-  - nvm install
-  - sudo apt-get install yarn
-  - yarn install
+  - if [ -n "$PPA" ]; then travis_retry sudo add-apt-repository "$PPA" -y; fi
+  - if [ -n "$DPKG_ADD_ARCH" ]; then sudo dpkg --add-architecture "$DPKG_ADD_ARCH" ; fi
+  - if [ -n "$PACKAGES" ]; then travis_retry sudo apt-get update; fi
+  - if [ -n "$PACKAGES" ]; then travis_retry sudo apt-get install --no-install-recommends --no-upgrade -qq $PACKAGES; fi
+  - nvm install && nvm use
+  - sudo apt-get install yarn && yarn install
 before_script:
-  - nvm use
+  - echo "before_script"
 script:
   - make all
 after_script:
