--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 install:
   - sudo curl https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
   - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-  # - sudo apt-get update
+  - sudo apt-get update
   - nvm install
   - sudo apt-get install yarn
   - yarn install
