--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,13 @@ language: generic
 before_install:
   - export PATH=$(echo $PATH | tr ':' "\n" | sed '/\/opt\/python/d' | tr "\n" ":" | sed "s|::|:|g")
 install:
+  - update-ca-certificates -f
   - sudo curl https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
   - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
   - sudo apt-get update && sudo apt-get install yarn
   - nvm install && nvm use && yarn install
 before_script:
-  - nvm use
+  - export PATH="$PATH:$HOME/.yarn/bin"
 script:
   - make all
 after_script:
