--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,7 @@ language: generic
 before_install:
   - export PATH=$(echo $PATH | tr ':' "\n" | sed '/\/opt\/python/d' | tr "\n" ":" | sed "s|::|:|g")
 install:
-  - update-ca-certificates -f
-  - sudo curl https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-  - sudo apt-get update && sudo apt-get install yarn
-  - nvm install && nvm use && yarn install
-before_script:
-  - export PATH="$PATH:$HOME/.yarn/bin"
+  - sudo apt-get update
 script:
   - make all
 after_script:
