--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - if [ -n "$DPKG_ADD_ARCH" ]; then sudo dpkg --add-architecture "$DPKG_ADD_ARCH" ; fi
   - if [ -n "$PACKAGES" ]; then travis_retry sudo apt-get update; fi
   - if [ -n "$PACKAGES" ]; then travis_retry sudo apt-get install --no-install-recommends --no-upgrade -qq $PACKAGES; fi
-  - sudo apt-get install yarn
+  - travis_retry sudo apt-get install yarn
   - yarn install
   - nvm install
 before_script:
