--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ install:
   - if [ -n "$PPA" ]; then travis_retry sudo add-apt-repository "$PPA" -y; fi
   - if [ -n "$DPKG_ADD_ARCH" ]; then sudo dpkg --add-architecture "$DPKG_ADD_ARCH" ; fi
   - if [ -n "$PACKAGES" ]; then travis_retry sudo apt-get update; fi
-  - if [ -n "$PACKAGES" ]; then travis_retry sudo apt-get install --no-install-recommends --no-upgrade -qq $PACKAGES; fi
-  - travis_retry sudo apt-get install yarn
+  - if [ -n "$PACKAGES" ]; then travis_retry sudo apt-get install yarn; fi
   - yarn install
   - nvm install
 before_script:
