--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,14 @@ sudo: required
 dist: trusty
 os: linux
 language: generic
+matrix:
+  - PACKAGES="yarn"
 
 before_install:
   - export PATH=$(echo $PATH | tr ':' "\n" | sed '/\/opt\/python/d' | tr "\n" ":" | sed "s|::|:|g")
 install:
-  - sudo curl https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-  - if [ -n "$PPA" ]; then travis_retry sudo add-apt-repository "$PPA" -y; fi
-  - if [ -n "$DPKG_ADD_ARCH" ]; then sudo dpkg --add-architecture "$DPKG_ADD_ARCH" ; fi
+  - if [ -n "$PACKAGES" ]; then travis_retry sudo curl https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -; fi
+  - if [ -n "$PACKAGES" ]; then travis_retry echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list; fi
   - if [ -n "$PACKAGES" ]; then travis_retry sudo apt-get update; fi
   - if [ -n "$PACKAGES" ]; then travis_retry sudo apt-get install --no-install-recommends --no-upgrade -qq $PACKAGES; fi
   - nvm install
