--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,27 @@
 sudo: required
 dist: trusty
-os: linux
 language: generic
+os: linux
+
 matrix:
   - PACKAGES="yarn"
 
 before_install:
   - export PATH=$(echo $PATH | tr ':' "\n" | sed '/\/opt\/python/d' | tr "\n" ":" | sed "s|::|:|g")
+
 install:
   - if [ -n "$PACKAGES" ]; then travis_retry sudo curl https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -; fi
   - if [ -n "$PACKAGES" ]; then travis_retry echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list; fi
   - if [ -n "$PACKAGES" ]; then travis_retry sudo apt-get update; fi
   - if [ -n "$PACKAGES" ]; then travis_retry sudo apt-get install --no-install-recommends --no-upgrade -qq $PACKAGES; fi
+  - yarn install
   - nvm install
+
 before_script:
   - nvm use
+
 script:
   - make all
+
 after_script:
   - echo $TRAVIS_COMMIT_RANGE
