--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ext/DeNGINX"]
 	path = ext/DeNGINX
-	url = git@github.com:DeSantisInc/DeNGINX.git
+	url = https://github.com/DeSantisInc/DeNGINX.git
