--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "ext/DePOST"]
 	path = ext/DePOST
 	url = https://github.com/DeSantisInc/DePOST.git
+[submodule "ext/DeSWN"]
+	path = ext/DeSWN
+	url = https://github.com/DeSantisInc/DeSWN.git
