--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
   "main": "index.js",
   "name": "deos",
   "scripts": {
-    "all": "webpack-dev-server --progress",
-    "build": "webpack --progress --colors",
-    "clean": "rm -rf bundle.js",
-    "watch": "webpack --progress --colors --watch"
+    "all": "webpack-dev-server --progress --host 0.0.0.0 --port 8282 --watch-poll"
   },
   "version": "0.3.0"
 }
