--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -68,8 +68,23 @@ http {
 	# Virtual Host Configs
 	##
 
-	include /etc/nginx/conf.d/*.conf;
-	include /etc/nginx/sites-enabled/deos.conf;
+    upstream ws_server {
+      server 127.0.0.1:8282;
+    }
+    server {
+        listen 80;
+        # Make site accessible from http://localhost/
+        server_name localhost;
+
+        location / {
+           proxy_pass http://ws_server/;
+           proxy_redirect off;
+
+           proxy_http_version 1.1;
+           proxy_set_header Upgrade $http_upgrade;
+           proxy_set_header Connection "upgrade";
+        }
+    }
 }
 
 
