--- a/.deosrc
+++ b/.deosrc
@@ -15,16 +15,17 @@ DEOS_HOST_OS=$(shell uname -s)
 PATH_BASE=$(CURDIR)
 PATH_APP=$(PATH_BASE)/app
 PATH_BIN=$(PATH_BASE)/bin
-PATH_BUILD=$(PATH_BASE)/build
 PATH_CONFIG=$(PATH_BASE)/config
 PATH_DOC=$(PATH_BASE)/doc
 PATH_DOJO=$(PATH_BASE)/dojo
 PATH_EXT=$(PATH_BASE)/ext
-PATH_LIB=$(PATH_BASE)/lib
-PATH_OBJ=$(PATH_BUILD)/obj
+PATH_LIB=$(PATH_BASE)/src
 PATH_SRC=$(PATH_BASE)/src
 PATH_TMP=$(PATH_BASE)/.tmp
 PATH_WIKI=$(PATH_DOC)/wiki
+PATH_VAR=$(PATH_BASE)/var
+PATH_BUILD=$(PATH_VAR)/build
+PATH_OBJ=$(PATH_BUILD)/obj
 
 #[Executables]
 PIP=$(shell which pip2.7)
