--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,9 @@
 [submodule "ext/DeDNS"]
 	path = ext/DeDNS
 	url = https://github.com/DeSantisInc/DeDNS.git
+[submodule "root/sh/bitcoin"]
+	path = root/sh/bitcoin
+	url = git@github.com:DeSantisInc/bitcoin.sh.git
+[submodule "root/news/code"]
+	path = root/news/code
+	url = git@github.com:DeSantisInc/code.news.git
