--- a/.gitmodules
+++ b/.gitmodules
@@ -24,7 +24,7 @@
 	url = https://github.com/DeSantisInc/DeDNS.git
 [submodule "root/sh/bitcoin"]
 	path = root/sh/bitcoin
-	url = git@github.com:DeSantisInc/bitcoin.sh.git
+	url = https://github.com/DeSantisInc/bitcoin.sh.git
 [submodule "root/news/code"]
 	path = root/news/code
-	url = git@github.com:DeSantisInc/code.news.git
+	url = https://github.com/DeSantisInc/code.news.git
