fix-elint: comma-dangle off -> false

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
       "import"
     ],
     "rules": {
-      "comma-dangle": "off",
+      "comma-dangle": false,
       "new-cap": [
         2,
         {
