--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "chai": "^3.5.0",
+    "concurrently": "^3.1.0",
+    "cross-env": "^3.1.3",
     "del": "^2.2.2",
     "eslint": "^3.10.2",
     "eslint-config-airbnb": "^13.0.0",
@@ -38,7 +40,11 @@
     "gulp-eslint": "^3.0.1",
     "gulp-flowtype": "^1.0.0",
     "gulp-mocha": "^3.0.1",
+    "gulp-pug": "^3.1.0",
+    "gulp-rename": "^1.2.2",
     "mocha": "^3.1.2",
+    "node-sass": "^3.13.0",
+    "sass-loader": "^4.0.2",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "webpack-stream": "^3.2.0"
@@ -74,6 +80,7 @@
   "scripts": {
     "all": "webpack-dev-server --inline --hot --progress --host 0.0.0.0 --port 8282 --watch-poll",
     "start": "gulp",
+    "pug": "gulp pug",
     "test": "gulp test"
   },
   "version": "0.3.0"
