--- a/package.json
+++ b/package.json
@@ -8,33 +8,89 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.16.0",
+    "bittorrent-dht": "^7.4.0",
+    "bittorrent-swarm": "^8.0.0",
+    "bootstrap": "4.0.0-alpha.4",
+    "chalk": "^1.1.3",
     "css-loader": "^0.26.0",
+    "electron": "^1.4.8",
+    "electron-debug": "^1.1.0",
+    "electron-devtools-installer": "^2.0.1",
+    "elliptic": "^6.3.2",
+    "express": "^4.14.0",
+    "font-awesome": "^4.7.0",
+    "fs-jetpack": "^0.10.3",
+    "glob": "^7.1.1",
     "immutable": "^3.8.1",
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0",
+    "magnet-uri": "^5.1.5",
+    "postcss": "^5.2.6",
+    "prettyjson": "^1.2.0",
+    "rc": "^1.1.6",
+    "react": "15.4.1",
+    "react-dom": "15.4.1",
     "react-redux": "^4.4.6",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
+    "reactstrap": "^3.9.1",
     "redux": "^3.6.0",
     "redux-actions": "^1.0.1",
     "redux-immutable": "^3.0.8",
+    "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.1.0",
     "style-loader": "^0.13.1",
-    "webpack-dev-server": "^1.16.2"
+    "ut_gittorrent": "^0.1.1",
+    "webpack": "^1.13.3",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.13.2",
+    "webpack-merge": "^0.18.0",
+    "webpack-validator": "^2.2.9",
+    "webtorrent": "^0.98.0",
+    "zero-fill": "^2.2.3"
   },
   "devDependencies": {
+    "asar": "^0.12.3",
+    "babel-core": "6.18.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.8",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-dev-expression": "^0.2.1",
+    "babel-plugin-tcomb": "^0.3.23",
+    "babel-plugin-webpack-loaders": "^0.8.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-flow": "^1.0.0",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-react-optimize": "^1.0.1",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "bower": "^1.8.0",
     "chai": "^3.5.0",
     "concurrently": "^3.1.0",
     "cross-env": "^3.1.3",
+    "css-modules-require-hook": "^4.0.5",
     "del": "^2.2.2",
-    "eslint": "^3.10.2",
-    "eslint-config-airbnb": "^13.0.0",
+    "devtron": "^1.4.0",
+    "electron-builder": "^8.6.0",
+    "electron-mocha": "^3.2.1",
+    "electron-packager": "^8.3.0",
+    "electron-rebuild": "^1.3.0",
+    "enzyme": "^2.6.0",
+    "eslint": "^3.9.0",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-formatter-pretty": "^1.1.0",
+    "eslint-import-resolver-webpack": "^0.6.0",
+    "eslint-loader": "^1.6.0",
     "eslint-plugin-flowtype": "^2.25.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-react": "^6.7.1",
+    "eslint-plugin-flowtype-errors": "^1.5.0",
+    "eslint-plugin-import": "1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-mocha": "^4.7.0",
+    "eslint-plugin-promise": "^3.3.0",
+    "eslint-plugin-react": "^6.4.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "fbjs-scripts": "^0.7.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^3.0.1",
@@ -42,12 +98,27 @@
     "gulp-mocha": "^3.0.1",
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
+    "istanbul": "^0.4.5",
+    "jsdom": "^9.8.3",
+    "json-loader": "^0.5.4",
+    "minimist": "^1.2.0",
     "mocha": "^3.1.2",
+    "node-libs-browser": "^2.0.0",
     "node-sass": "^3.13.0",
+    "react-addons-css-transition-group": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
+    "react-addons-transition-group": "^15.4.1",
+    "rollup": "^0.36.4",
+    "rollup-plugin-istanbul": "^1.1.0",
     "sass-loader": "^4.0.2",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
-    "webpack-stream": "^3.2.0"
+    "source-map-support": "^0.4.6",
+    "spectron": "^3.4.0",
+    "tcomb": "^3.2.15",
+    "uuid": "^3.0.0",
+    "webpack-stream": "^3.2.0",
+    "yargs": "^6.4.0"
   },
   "devEngines": {
     "node": ">=4.x",
