--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "author": "Andrew DeSantis <andrew@desantis.email>",
   "babel": {
     "presets": [
       "flow",
@@ -48,6 +49,7 @@
     "webtorrent": "^0.98.0",
     "zero-fill": "^2.2.3"
   },
+  "description": "ΔOS: Decentralized Operating System",
   "devDependencies": {
     "asar": "^0.12.3",
     "babel-core": "6.18.0",
