--- a/package.json
+++ b/package.json
@@ -188,7 +188,9 @@
     "url": "git@github.com:DeSantisInc/DeOS.git"
   },
   "scripts": {
-    "all": "webpack-dev-server --inline --hot --progress --host 0.0.0.0 --port 8282 --watch-poll",
+    "dev": "concurrently --kill-others \"yarn run dev-server\" \"yarn run dev-start\"",
+    "dev-server": "cross-env NODE_ENV=dev node -r babel-register ./src/server/index.js",
+    "dev-start": "cross-env HOT=1 NODE_ENV=dev electron -r babel-register -r babel-polyfill ./src/renderer/main.js",
     "pug": "gulp pug",
     "start": "gulp",
     "test": "gulp test"
