--- a/app/package.json
+++ b/app/package.json
@@ -1,11 +1,42 @@
 {
   "author": "Andrew DeSantis <andrew@desantis.email>",
   "copyright": "(c) 2016, DeSantis Inc.",
-  "description": "DeOS -- Electron Application",
-  "homepage": "https://www.desantisinc.com",
+  "dependencies": {
+    "babel-polyfill": "^6.16.0",
+    "bootstrap": "4.0.0-alpha.4",
+    "electron": "^1.4.4",
+    "electron-debug": "^1.0.1",
+    "electron-devtools-installer": "^2.0.1",
+    "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "font-awesome": "^4.6.3",
+    "fs-jetpack": "^0.10.0",
+    "immutable": "^3.8.1",
+    "postcss": "^5.2.5",
+    "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.2",
+    "react-addons-transition-group": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.6",
+    "reactstrap": "^3.7.1",
+    "redux": "^3.6.0",
+    "redux-actions": "^0.12.0",
+    "redux-immutable": "^3.0.8",
+    "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.1.0",
+    "webpack": "^1.13.3",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-hot-middleware": "^2.13.1",
+    "webpack-merge": "^0.15.0",
+    "webpack-validator": "^2.2.9"
+  },
+  "description": "ΔOS: Decentralized Operating System",
+  "homepage": "https://desantis.io",
   "license": "BSD-2-Clause",
   "main": "main.min.js",
-  "name": "deos-app",
+  "name": "DeOS",
   "productName": "DeOS",
   "version": "0.3.0"
 }
