add-check: color

--- a/.deosrc
+++ b/.deosrc
@@ -1,12 +1,11 @@
 export MAKEFLAGS=--no-print-directory
 
 .DEFAULT_GOAL:=all
-.PHONY:all check
+.PHONY:all check chmod
 .SUBLIME_TARGETS:all
 
 BASEDIR:=$(CURDIR)
 PRINT:=$(BASEDIR)/bin/printm
-FILES:=.gitignore LICENSE.md Makefile README.md
+FILES:=.gitignore LICENSE.md Makefile README.md test.txt
 
-include src/deos/utils.mk
 include src/deos/check.mk
