--- a/.deosrc
+++ b/.deosrc
@@ -1,14 +1,21 @@
 export MAKEFLAGS=--no-print-directory
 
 .DEFAULT_GOAL:=all
-.PHONY:all build check chmod clean yarn
+
+.PHONY:all build check chmod clean vm yarn
+
 .SUBLIME_TARGETS:all
 
 BASEDIR:=$(CURDIR)
+
 BIN:=$(BASEDIR)/bin
+
 LIB:=$(BASEDIR)/src
+
 SRC:=$(BASEDIR)/src
+
 DEOS:=$(BASEDIR)/bin/deos
+
 PRINT:=$(BASEDIR)/bin/printm
 
 FILES:=.deosrc\
@@ -20,6 +27,7 @@ FILES:=.deosrc\
        LICENSE.md\
        Makefile\
        README.md\
+       Vagrantfile\
        yarn.lock\
        app/yarn.lock\
        bin/deos\
