--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,19 @@
-*.o
-*.pyc
-
+#[dotfiles]
 .DS_Store
+
+#[dotfolders]
 .nvm/
 .vagrant/
 
-app/node_modules/
-node_modules/
+#[files]
+bin/logic
 npm-debug.log
 yarn-error.log
-bin/logic
+
+#[folders]
+app/node_modules/
+node_modules/
+
+#[wildcards]
+*.o
+*.pyc
