--- a/.deosrc
+++ b/.deosrc
@@ -1,15 +1,24 @@
 export MAKEFLAGS=--no-print-directory
 
 .DEFAULT_GOAL:=all
+
 .PHONY:all app build check chmod clean install vm yarn
+
 .SUBLIME_TARGETS:all
 
 BASEDIR:=$(CURDIR)
+
 BIN:=$(BASEDIR)/bin
+
 LIB:=$(BASEDIR)/src
+
 SRC:=$(BASEDIR)/src
+
 DEOS:=$(BASEDIR)/bin/deos
+
 PRINT:=$(BASEDIR)/bin/printm
+
+VMCMD="cd /vagrant; bash -i -c 'ipython --profile=vagrant'"
 
 FILES:=.deosrc\
        .editorconfig\
@@ -49,3 +58,4 @@ FILES:=.deosrc\
        var/build/obj/.gitkeep
 
 include src/deos/test.mk
+include src/deos/vbox.mk
