--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "babel-preset-latest": "^6.16.0",
+    "cross-env": "^3.1.3",
     "del": "^2.2.2",
     "electron": "^1.4.8",
     "eslint": "^3.11.1",
@@ -14,7 +15,9 @@
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2"
   },
+  "license": "BSD-2-Clause",
   "scripts": {
-    "start": "gulp"
+    "clean": "gulp clean",
+    "gulp": "gulp"
   }
 }
