--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^3.0.1",
     "gulp-pug": "^3.1.0",
-    "gulp-rename": "^1.2.2"
+    "gulp-rename": "^1.2.2",
+    "webpack": "^1.13.3",
+    "webpack-stream": "^3.2.0"
   },
   "license": "BSD-2-Clause",
   "scripts": {
