--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "dependencies": {
+    "electron": "^1.4.8"
+  },
   "devDependencies": {
     "babel-preset-latest": "^6.16.0",
     "cross-env": "^3.1.3",
     "del": "^2.2.2",
-    "electron": "^1.4.8",
     "eslint": "^3.11.1",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
