--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     ]
   },
   "dependencies": {
+    "babel-polyfill": "^6.16.0",
     "electron": "^1.4.8"
   },
   "devDependencies": {
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.2.8",
     "babel-preset-latest": "^6.16.0",
     "cross-env": "^3.1.3",
     "del": "^2.2.2",
@@ -25,6 +28,9 @@
     "webpack-stream": "^3.2.0"
   },
   "eslintConfig": {
+    "env": {
+      "browser": true
+    },
     "extends": "airbnb",
     "plugins": [
       "import"
