--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "babel-polyfill": "^6.16.0",
     "bootstrap": "4.0.0-alpha.4",
-    "font-awesome": "^4.6.3"
+    "font-awesome": "^4.6.3",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
   },
   "main": "main.js",
   "name": "DeOS",
