--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
   "babel": {
     "presets": [
-      "latest"
+      "latest",
+      "react"
     ]
   },
   "dependencies": {
     "babel-polyfill": "^6.16.0",
-    "electron": "^1.4.8"
+    "electron": "^1.4.8",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.2.8",
     "babel-preset-latest": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "cross-env": "^3.1.3",
+    "css-loader": "^0.26.0",
+    "css-modules-require-hook": "^4.0.5",
     "del": "^2.2.2",
     "eslint": "^3.11.1",
     "eslint-config-airbnb": "^13.0.0",
@@ -24,6 +30,9 @@
     "gulp-eslint": "^3.0.1",
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
+    "node-sass": "^3.13.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
     "webpack-stream": "^3.2.0"
   },
