--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,9 @@
     "bootstrap": "4.0.0-alpha.4",
     "font-awesome": "^4.6.3",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0"
   },
   "main": "main.js",
   "name": "DeOS",
