--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "babel-polyfill": "^6.16.0",
     "electron": "^1.4.8",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
