--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "^6.2.8",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "chai": "^3.5.0",
     "cross-env": "^3.1.3",
     "css-loader": "^0.26.0",
     "css-modules-require-hook": "^4.0.5",
@@ -35,6 +36,7 @@
     "gulp-eslint": "^3.0.1",
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
+    "mocha": "^3.2.0",
     "node-sass": "^3.13.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
