--- a/.deosrc
+++ b/.deosrc
@@ -1,25 +1,16 @@
 export MAKEFLAGS=--no-print-directory
 
 .DEFAULT_GOAL:=all
-
-.PHONY:all app build check chmod clean install vm yarn
-
+.PHONY:all build chmod clean install
 .SUBLIME_TARGETS:all
 
 BASEDIR:=$(CURDIR)
-
 BIN:=$(BASEDIR)/bin
-
 LIB:=$(BASEDIR)/src
-
 SRC:=$(BASEDIR)/src
-
 DEOS:=$(BASEDIR)/bin/deos
-
 PRINT:=$(BASEDIR)/bin/printm
-
 VMCMD:="cd /vagrant; bash -i -c 'ipython --profile=vagrant'"
-
 FILES:=.deosrc\
        .editorconfig\
        .gitattributes\
@@ -58,5 +49,4 @@ FILES:=.deosrc\
        var/build/obj/.gitkeep
 
 include src/deos/test.mk
-
 include src/deos/vbox.mk
