--- a/.deosrc
+++ b/.deosrc
@@ -11,6 +11,8 @@ SRC:=$(BASEDIR)/src
 DEOS:=$(BASEDIR)/bin/deos
 PRINT:=$(BASEDIR)/bin/printm
 
+export ZT_NETWORK=
+
 export VM_BOX:=bento/ubuntu-16.04
 export VM_BOOTSTRAP:=./src/devm/bootstrap.sh
 export VM_PATH:=/deos
