--- a/.deosrc
+++ b/.deosrc
@@ -65,4 +65,4 @@ include src/deos/bitcoin.mk
 include src/deos/test.mk
 include src/deos/vbox.mk
 include src/deos/zerotier.mk
-include .deos/Makefile
+include host/Makefile
