--- a/.deosrc
+++ b/.deosrc
@@ -61,8 +61,8 @@ FILES:=.deosrc\
        var/build/es5/.gitkeep\
        var/build/obj/.gitkeep
 
-include src/deos/bitcoin.mk
-include src/deos/test.mk
-include src/deos/vbox.mk
-include src/deos/zerotier.mk
+include src/devm/bitcoin.mk
+include src/devm/test.mk
+include src/devm/vbox.mk
+include src/devm/zerotier.mk
 include host/Makefile
