--- a/.deosrc
+++ b/.deosrc
@@ -3,6 +3,7 @@ IS_TRUE:=1
 IS_MAC:=Darwin
 IS_LINUX:=Linux
 
+DEBUG:=$(IS_FALSE)
 HOST_OS:=$(shell uname -s)
 BASEDIR:=$(CURDIR)
 BIN:=$(BASEDIR)/bin
@@ -22,7 +23,11 @@ export VM_PATH_ZT:=/var/lib/zerotier-one
 export VM_SHELL:=bash -c 'BASH_ENV=/etc/profile exec bash'
 export VM_SHELL_SSH:=bash -l
 
+ifeq ($(DEBUG), $(IS_TRUE))
+export BOOT_DEBUG:=
+else
 export BOOT_DEBUG:=2> /dev/null
+endif
 
 export PORT_IN_0:=1337
 export PORT_OUT_0:=80
@@ -34,6 +39,7 @@ export PORT_OUT_2:=1336
 export DOCKER_APT_REPO:=https://apt.dockerproject.org/repo
 export DOCKER_GPG_KEY:=58118E89F3A912897C070ADBF76221572C52609D
 export DOCKER_KEY_SERV:=hkp://ha.pool.sks-keyservers.net:80
+export DOCKER_PY_PATH:=/deos/var/docker/python
 export DOCKER_UBUNTU:=ubuntu-xenial
 export DOCKER_SOURCES:=/etc/apt/sources.list.d/docker.list
 export DOCKER_VERSION:=1.8.2
