--- a/.deosrc
+++ b/.deosrc
@@ -28,7 +28,7 @@ VENV:=$(BASEDIR)/venv
 export VM_USER:=vagrant
 export VM_BASHRC:=/home/$(VM_USER)/.bashrc
 export VM_BOX:=bento/ubuntu-16.04
-export VM_BOOT:=./boot/install.sh
+export VM_BOOT:=./src/boot/index.sh
 export VM_PATH:=/deos
 export VM_PATH_ZT:=/var/lib/zerotier-one
 export VM_PATH_NVM:=/home/$(VM_USER)/.nvm
@@ -114,4 +114,3 @@ var/build/es5/.gitkeep\
 var/build/obj/.gitkeep
 
 include src/install/index.mk
-include host/Makefile
