--- a/.deosrc
+++ b/.deosrc
@@ -1,12 +1,14 @@
 include src/install/bootstrap.mk
 
 export DeOS_BOOT_ARGS_BITCOIN:=-b
+export DeOS_BOOT_ARGS_BLOCKSTACK:=-d
 export DeOS_BOOT_ARGS_BOOTSTRAP:=-a
 export DeOS_BOOT_ARGS_PYTHON:=-c
 export DeOS_BOOT_PATH:=/deos/src/boot
 export DeOS_BOOT_SCRIPT:=./src/boot/index.sh
 export DeOS_BUILD_APT_UPGRADE:=$(FALSE)
 export DeOS_BUILD_BITCOIN:=$(FALSE)
+export DeOS_BUILD_BLOCKSTACK:=$(TRUE)
 export DeOS_BUILD_PYTHON:=$(TRUE)
 export DeOS_CONFIG_DEBUG:=$(FALSE)
 export DeOS_HOST_OS:=$(shell uname -s)
