--- a/.deosrc
+++ b/.deosrc
@@ -6,7 +6,6 @@ export DeOS_BOOT_ARGS_BOOTSTRAP:=-a
 export DeOS_BOOT_ARGS_PYTHON:=-c
 export DeOS_BOOT_PATH:=/deos/src/boot
 export DeOS_BOOT_SCRIPT:=./src/boot/index.sh
-export DeOS_BUILD_APT_UPGRADE:=$(FALSE)
 export DeOS_BUILD_BITCOIN:=$(FALSE)
 export DeOS_BUILD_BLOCKSTACK:=$(TRUE)
 export DeOS_BUILD_PYTHON:=$(TRUE)
@@ -16,6 +15,7 @@ export DeOS_HOST_OS:=$(shell uname -s)
 ###
 
 DEBUG:=$(FALSE)
+FASTBOOT:=$(TRUE)
 HOST_OS:=$(shell uname -s)
 
 export BUILDDOCKER:=$(FALSE)
@@ -50,6 +50,14 @@ ifeq ($(DEBUG), $(IS_TRUE))
 export DeOS_BOOT_DEBUG:=
 else
 export DeOS_BOOT_DEBUG:=2> /dev/null
+endif
+
+ifeq ($(FASTBOOT), $(IS_TRUE))
+export DeOS_BUILD_APT_UPGRADE:=$(FALSE)
+export DeOS_CMD_APT_UPGRADE:=echo 'FASTBOOT!'
+else
+export DeOS_BUILD_APT_UPGRADE:=$(TRUE)
+export DeOS_CMD_APT_UPGRADE:=apt-get -y upgrade $(DeOS_BOOT_DEBUG)
 endif
 
 export DeOS_VM_PORT_GUEST_0:=1337
