--- a/.deosrc
+++ b/.deosrc
@@ -12,7 +12,7 @@ export DeOS_BOOT_PATH:=/deos/src/boot
 export DeOS_BOOT_SCRIPT:=./src/boot/index.sh
 export DeOS_BUILD_BITCOIN:=$(FALSE)
 export DeOS_BUILD_BLOCKSTACK:=$(TRUE)
-export DeOS_BUILD_DOCKER:=$(TRUE)
+export DeOS_BUILD_DOCKER:=$(FALSE)
 export DeOS_BUILD_PYTHON:=$(TRUE)
 export DeOS_CONFIG_DEBUG:=$(FALSE)
 export DeOS_HOST_OS:=$(shell uname -s)
